--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "mongoose": "6.11.2",
-    "next": "13.4.3",
+    "next": "^13.5.0",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
